# sweetseranade

./: .gitignore  README  README.md
frontend/: package.json  tailwind.config.js
frontend/src/components/: Button.tsx  FileInput.tsx  Input.tsx  SeparateImage.tsx
frontend/src/hooks/: useWindowSize.tsx
frontend/src/pages/: _document.tsx  index.tsx
frontend/src/styles/: Home.module.css  globals.css
frontend/src/utils/: constants.ts
server/: .dockerignore  Dockerfile  Makefile  constants.py  generate.py  preprocessing.py  pyproject.toml  server.py  summarize.py
server/scripts/: setup.sh
