[tool.poetry]
name = "serenade"
version = "0.1.0"
description = "Generate a context-aware love serenade by uploading a PDF of a book, text message history, or anything else."
authors = ["amir, verumlotus"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
langchain = "^0.0.82"
openai = "^0.26.5"
nltk = "^3.8.1"
faiss-cpu = "^1.7.3"
bs4 = "^0.0.1"
unstructured = "^0.4.8"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
pypdf = "^3.4.0"
poetry-dotenv-plugin = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
